--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Days\Eighteen\Day7_Part2.cs" />
     <Compile Include="Days\Eighteen\Day8.cs" />
     <Compile Include="Days\Nineteen\Day1.cs" />
+    <Compile Include="Days\Nineteen\Day2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -74,6 +75,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Input\2019\day1.txt" />
+    <Content Include="Input\2019\day2.txt" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
