--- a/AdventOfCodeCore/AdventOfCodeCore.csproj
+++ b/AdventOfCodeCore/AdventOfCodeCore.csproj
@@ -43,4 +43,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
