--- a/AdventOfCodeCore/AdventOfCodeCore.csproj
+++ b/AdventOfCodeCore/AdventOfCodeCore.csproj
@@ -45,6 +45,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Ngenerics" Version="1.5.3" />
   </ItemGroup>
 
 </Project>
